# AIMO

./: README.md  numina-sft.ipynb  pyproject.toml
scripts/: lr_sweep.py
src/numina_finetune/: __init__.py  config.py  data.py  main.py  model.py  trainer.py
tests/: test_data.py
