[project]
name = "numina-finetune"
version = "0.1.0"
description = "Finetuning utilities for OpenAI OSS 120B on NuminaMath datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "AIMO" }
]

dependencies = [
  "transformers>=4.46.0",
  "datasets>=2.19.0",
  "accelerate>=0.33.0",
  "torch>=2.2.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
train = [
  "wandb>=0.17.0",
]

[project.scripts]
numina-finetune = "numina_finetune.main:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
